bluetooth: Use BuildInfo to retrieve the Android version

__ANDROID_API__ is the minimum API supported by the NDK we are compiling
against, not the API level of the device we are running on. Because we
support 16+ we were always returning false.

BUG=714623

Review-Url: https://codereview.chromium.org/2841943003
Cr-Commit-Position: refs/heads/master@{#467319}

Former-commit-id: c71286bf4ad5a3a4cf1a031fe100f26664c8a023